Fixed background image not showing

--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,7 @@ body {
 }
 
 .header {
-  background-image: url("img/header.jpg");
+  background-image: url("../img/header.jpg");
   text-align: center;
   background-size: 100% 100%;
   background-repeat: no-repeat;
